[CLS] Fix ‘jumping’ carousel
My previous usage of `content-visibility: auto;` was causing the page to
jump as the carousel neared or left the viewport. To solve this, I’ve
applied `content-visibility` to only subsequent (and therefore
off-screen) carousel items, meaning the first item always reserves the
correct space in the UI irrespective of whether it’s the current item.

--- a/css/isolated/components.carousel.scss
+++ b/css/isolated/components.carousel.scss
@@ -37,15 +37,20 @@ $_panes-quantity: 5;
   }
 
 
-    /**
-     * 1. Attempt to lazily paint off-screen panes.
-     */
     .c-carousel__pane {
       position: relative;
       display: table-cell;
       vertical-align: middle;
       width: 100% / $_panes-quantity;
-      content-visibility: auto; /* [1] */
+
+      /**
+       * 1. Attempt to lazily paint off-screen panes.
+       */
+      & + & {
+        content-visibility: auto; /* [1] */
+        contain-intrinsic-size: 1px 240px; /* [1] */
+      }
+
     }
 
       .c-carousel__link {
